--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,5 +24,5 @@ jobs:
 
       - name: Run tests
         env:
-          ETH_RPC_URL: https://mainnet.infura.io/v3/b7821200399e4be2b4e5dbdf06fbe85b
+          RPC_URL: https://rpc.ankr.com/fantom
         run: make trace
